metalLB/argocd-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
spec:
  entryPoints:
    - websecure # Change to "web" if using HTTP
  routes:
    - match: Host(`argocd.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: argo-cd-argocd-server
          port: 80
